--- a/css/style.css
+++ b/css/style.css
@@ -622,7 +622,7 @@ margin-right: 5px;
 }
 
 @media (max-width : 991px){
-    .portfolio .portfolioitem,
+    .portfolio .portfolio-item,
     .service .service-item{
         flex: 0 0 50%;
         max-width: 50%;
@@ -639,7 +639,7 @@ margin-right: 5px;
 } 
 @media (max-width: 787px){
     .contact .contact-form .col-6,
-    .contact .contact-info-item
+    .contact .contact-info-item,
     .portfolio .portfolio-item,
     .service .service-item,
     .about .about-content .experience,
