--- a/css/style.css
+++ b/css/style.css
@@ -533,6 +533,12 @@ margin-right: 5px;
     display: block;
 }
 
+/* .portfolio .portfolio-item:hover{
+    position: center;
+    transform: scale(2);
+    transition: 0.5s;
+} */
+
 .contact-title{
     color: var(--skin-color);
     text-align: center;
